# nfsserver

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
docs/: acl-design.md  integration-test.md  nfs-over-tls-plan.md  remaining-work.md
progress/: p1-correctness.md  p2-interoperability.md  p3-completeness.md  summary.md
src/: main.cpp
src/locking/: lock_table.cpp  lock_table.h
src/mount/: mount_server.cpp  mount_server.h  mount_types.h
src/nfs/: nfs_procedures.cpp  nfs_procedures.h  nfs_server.cpp  nfs_server.h  nfs_types.h
src/nfs4/: nfs4_attrs.cpp  nfs4_attrs.h  nfs4_callback.cpp  nfs4_callback.h  nfs4_server.cpp  nfs4_server.h  nfs4_state.cpp  nfs4_state.h  nfs4_types.h
src/nlm/: nlm_server.cpp  nlm_server.h  nlm_types.h
src/nsm/: nsm_client.cpp  nsm_client.h
src/rpc/: portmapper.cpp  portmapper.h  rpc_server.cpp  rpc_server.h  rpc_tls.cpp  rpc_tls.h  rpc_types.h
src/vfs/: local_fs.cpp  local_fs.h  vfs.cpp  vfs.h
src/xdr/: xdr_codec.cpp  xdr_codec.h
tests/: CMakeLists.txt  test_locking.cpp  test_nfs.cpp  test_nfs4.cpp  test_nlm.cpp  test_rpc.cpp  test_vfs.cpp  test_xdr.cpp
